unpackaged/main/default/objects/WorkOrder/fields/a_Derniere_fois_planifie_le__c.field-meta.xml
<CustomField>
    <fullName>a_Derniere_fois_planifie_le__c</fullName>
    <label>Dernière fois planifié le</label>
    <type>DateTime</type>
</CustomField>