unpackaged/main/default/objects/WorkOrder/fields/a_Dossier_de_soins__c.field-meta.xml
<CustomField>
    <fullName>a_Dossier_de_soins__c</fullName>
    <formula>Account.a_Dossier_de_soins__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dossier de soins</label>
    <type>Text</type>
</CustomField>