unpackaged/main/default/objects/WorkOrder/fields/a_Forcer_heure_slectionnee__c.field-meta.xml
<CustomField>
    <fullName>a_Forcer_heure_slectionnee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forcer l&apos;heure sélectionnée</label>
    <type>Checkbox</type>
</CustomField>