unpackaged/main/default/objects/WorkOrder/fields/a_Frequence__c.field-meta.xml
<CustomField>
    <fullName>a_Frequence__c</fullName>
    <label>Fréquence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>