unpackaged/main/default/objects/WorkOrder/fields/a_Jour_heure_premiere_prest__c.field-meta.xml
<CustomField>
    <fullName>a_Jour_heure_premiere_prest__c</fullName>
    <label>Jour et l&apos;heure de la première prest.</label>
    <type>DateTime</type>
</CustomField>