unpackaged/main/default/objects/WorkOrder/fields/a_Jours_de_semaine__c.field-meta.xml
<CustomField>
    <fullName>a_Jours_de_semaine__c</fullName>
    <label>Jours de la semaine</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Lundi</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Mardi</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Mercredi</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Jeudi</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Vendredi</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Samedi</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Dimanche</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>