unpackaged/main/default/objects/WorkOrder/fields/a_Premiere_prestation_le__c.field-meta.xml
<CustomField>
    <fullName>a_Premiere_prestation_le__c</fullName>
    <label>Première prestation le</label>
    <type>Date</type>
</CustomField>