unpackaged/main/default/objects/WorkOrder/fields/a_Prestation__c.field-meta.xml
<CustomField>
    <fullName>a_Prestation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestation de planification</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Intervention</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Acte</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Interventions</relationshipLabel>
    <relationshipName>Interventions</relationshipName>
    <type>Lookup</type>
</CustomField>