unpackaged/main/default/objects/WorkOrder/fields/a_Prochaine_planification_le__c.field-meta.xml
<CustomField>
    <fullName>a_Prochaine_planification_le__c</fullName>
    <label>Prochaine planification le</label>
    <type>Date</type>
</CustomField>