unpackaged/main/default/objects/WorkOrder/fields/a_Recurrence_valide_au__c.field-meta.xml
<CustomField>
    <fullName>a_Recurrence_valide_au__c</fullName>
    <label>Récurrence valide au</label>
    <type>Date</type>
</CustomField>