unpackaged/main/default/objects/WorkOrder/fields/a_Recurrence_valide_du__c.field-meta.xml
<CustomField>
    <fullName>a_Recurrence_valide_du__c</fullName>
    <label>Récurrence valide du</label>
    <type>Date</type>
</CustomField>