unpackaged/main/default/objects/WorkOrder/fields/a_Slot__c.field-meta.xml
<CustomField>
    <fullName>a_Slot__c</fullName>
    <label>Slot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Slots_pour_les_prestations</valueSetName>
    </valueSet>
</CustomField>