unpackaged/main/default/objects/WorkOrder/fields/a_Type_de_frequence__c.field-meta.xml
<CustomField>
    <fullName>a_Type_de_frequence__c</fullName>
    <label>Type de fréquence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jours</fullName>
            </value>
            <value>
                <fullName>Semaines</fullName>
            </value>
            <value>
                <fullName>Mois</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>