unpackaged/main/default/objects/WorkOrder/fields/a_Type_de_Prestation__c.field-meta.xml
<CustomField>
    <fullName>a_Type_de_Prestation__c</fullName>
    <label>Type de Prestation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LAMal</fullName>
            </value>
            <value>
                <fullName>Privé</fullName>
            </value>
            <value>
                <fullName>Fondation</fullName>
            </value>
            <value>
                <fullName>LAA (accident)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>