unpackaged/main/default/objects/WorkOrder/fields/a_Type_de_recurrence__c.field-meta.xml
<CustomField>
    <fullName>a_Type_de_recurrence__c</fullName>
    <label>Type de récurrence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fréquence et type de fréquence</fullName>
            </value>
            <value>
                <fullName>Jours de la semaine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>