unpackaged/main/default/objects/WorkOrder/fields/Acte__c.field-meta.xml
<CustomField>
    <fullName>Acte__c</fullName>
    <label>Acte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>