unpackaged/main/default/objects/WorkOrder/fields/Code_de_facturation__c.field-meta.xml
<CustomField>
    <fullName>Code_de_facturation__c</fullName>
    <label>Code de facturation</label>
    <length>2</length>
    <type>Text</type>
</CustomField>