unpackaged/main/default/objects/WorkOrder/fields/Code_InterRAI__c.field-meta.xml
<CustomField>
    <fullName>Code_InterRAI__c</fullName>
    <label>Code InterRAI</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>