unpackaged/main/default/objects/WorkOrder/fields/Code_LaMAL__c.field-meta.xml
<CustomField>
    <fullName>Code_LaMAL__c</fullName>
    <label>Code LaMAL</label>
    <length>8</length>
    <type>Text</type>
</CustomField>