unpackaged/main/default/objects/WorkOrder/fields/Dossier_de_prise_en_charge__c.field-meta.xml
<CustomField>
    <fullName>Dossier_de_prise_en_charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier de prise en charge</label>
    <referenceTo>Dossier_de_prise_en_charge__c</referenceTo>
    <relationshipLabel>Prestations</relationshipLabel>
    <relationshipName>DossierIntervention</relationshipName>
    <type>Lookup</type>
</CustomField>