unpackaged/main/default/objects/WorkOrder/fields/Dossier_de_prise_en_charge_du_parent__c.field-meta.xml
<CustomField>
    <fullName>Dossier_de_prise_en_charge_du_parent__c</fullName>
    <formula>a_Prestation__r.Dossier_de_prise_en_charge__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dossier de prise en charge du parent</label>
    <type>Text</type>
</CustomField>