unpackaged/main/default/objects/WorkOrder/fields/Dossier_intervention__c.field-meta.xml
<CustomField>
    <fullName>Dossier_intervention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier d&apos;intervention</label>
    <referenceTo>Dossier_intervention__c</referenceTo>
    <relationshipLabel>Prestations</relationshipLabel>
    <relationshipName>DossierIntervention</relationshipName>
    <type>Lookup</type>
</CustomField>