unpackaged/main/default/objects/WorkOrder/fields/Fr_quence_InterRAI__c.field-meta.xml
<CustomField>
    <fullName>Fr_quence_InterRAI__c</fullName>
    <label>Fréquence InterRAI</label>
    <length>8</length>
    <type>Text</type>
</CustomField>