unpackaged/main/default/objects/WorkOrder/fields/Groupe_InterRAI__c.field-meta.xml
<CustomField>
    <fullName>Groupe_InterRAI__c</fullName>
    <label>Groupe InterRAI</label>
    <length>60</length>
    <type>Text</type>
</CustomField>