unpackaged/main/default/objects/WorkOrder/fields/Nb_InterRAI__c.field-meta.xml
<CustomField>
    <fullName>Nb_InterRAI__c</fullName>
    <label>Nb. InterRAI</label>
    <length>8</length>
    <type>Text</type>
</CustomField>