unpackaged/main/default/objects/WorkOrder/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Prestations ne peuvent être liées qu&apos;aux patients ou patients potentiels</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Patient, Patient potentiel</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prestations</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>