unpackaged/main/default/objects/WorkOrder/fields/Remarque_de_l_inf_r_f__c.field-meta.xml
<CustomField>
    <fullName>Remarque_de_l_inf_r_f__c</fullName>
    <label>Remarque de l&apos;inf. réf.</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>