unpackaged/main/default/objects/WorkOrder/fields/SearchCatalogue__c.field-meta.xml
<CustomField>
    <fullName>SearchCatalogue__c</fullName>
    <formula>TEXT(Code_InterRAI__c)  &amp;   &quot; - &quot;   &amp;  Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SearchCatalogue</label>
    <type>Text</type>
</CustomField>