unpackaged/main/default/objects/WorkOrder/fields/Temps__c.field-meta.xml
<CustomField>
    <fullName>Temps__c</fullName>
    <label>Temps</label>
    <length>8</length>
    <type>Text</type>
</CustomField>