unpackaged/main/default/objects/WorkOrder/fields/Temps_InterRAI__c.field-meta.xml
<CustomField>
    <fullName>Temps_InterRAI__c</fullName>
    <inlineHelpText>Tems en minutes</inlineHelpText>
    <label>Temps InterRAI</label>
    <length>8</length>
    <type>Text</type>
</CustomField>