unpackaged/main/default/objects/WorkOrder/fields/ZTriggerClone__c.field-meta.xml
<CustomField>
    <fullName>ZTriggerClone__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Clone if set from no to yes</inlineHelpText>
    <label>ZTriggerClone</label>
    <type>Checkbox</type>
</CustomField>