unpackaged/main/default/objects/WorkOrder/recordTypes/Acte.recordType-meta.xml
<RecordType>
    <fullName>Acte</fullName>
    <active>true</active>
    <label>Acte</label>
</RecordType>