unpackaged/main/default/objects/WorkOrder/recordTypes/Catalogue_des_prestations.recordType-meta.xml
<RecordType>
    <fullName>Catalogue_des_prestations</fullName>
    <active>true</active>
    <label>Catalogue des prestations</label>
</RecordType>