unpackaged/main/default/objects/WorkOrder/recordTypes/Intervention.recordType-meta.xml
<RecordType>
    <fullName>Intervention</fullName>
    <active>true</active>
    <label>Intervention</label>
</RecordType>