unpackaged/main/default/objects/WorkOrder/recordTypes/Prestation_LAMal.recordType-meta.xml
<RecordType>
    <fullName>Prestation_LAMal</fullName>
    <active>true</active>
    <label>Prestation LAMal</label>
</RecordType>