unpackaged/main/default/objects/WorkOrder/recordTypes/Prestation_privee.recordType-meta.xml
<RecordType>
    <fullName>Prestation_privee</fullName>
    <active>true</active>
    <label>Prestation privée</label>
</RecordType>