unpackaged/main/default/objects/WorkOrder/recordTypes/Prestation_sociale.recordType-meta.xml
<RecordType>
    <fullName>Prestation_sociale</fullName>
    <active>true</active>
    <label>Prestation sociale</label>
</RecordType>