unpackaged/main/default/objects/WorkOrder/validationRules/Validate_Prestation_start_end_dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Prestation_start_end_dates</fullName>
    <active>true</active>
    <errorConditionFormula>and(TEXT(Status) = &apos;In Progress&apos;, isblank(a_Recurrence_valide_au__c))</errorConditionFormula>
    <errorDisplayField>a_Recurrence_valide_du__c</errorDisplayField>
    <errorMessage>Veuillez renseigner la fin de validité de la récurrence.</errorMessage>
</ValidationRule>