unpackaged/main/default/objects/WorkOrder/validationRules/Validate_Recurrence_Setting_Freq.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Recurrence_Setting_Freq</fullName>
    <active>true</active>
    <errorConditionFormula>and(TEXT(Status) = &apos;In Progress&apos;, and(TEXT(a_Type_de_recurrence__c) = &apos;Fréquence et type de fréquence&apos;, or(TEXT(a_Type_de_frequence__c) = &apos;&apos;, isblank(a_Frequence__c))))</errorConditionFormula>
    <errorDisplayField>a_Frequence__c</errorDisplayField>
    <errorMessage>Pour le Type de récurrence, vous devez renseigner la Fréquence et le Type de fréquence.</errorMessage>
</ValidationRule>