unpackaged/main/default/objects/WorkOrder/validationRules/Validate_Recurrence_Setting_WeekDays.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Recurrence_Setting_WeekDays</fullName>
    <active>true</active>
    <errorConditionFormula>and(TEXT(Status) = &apos;In Progress&apos;,  and(TEXT(a_Type_de_recurrence__c) = &apos;Jours de la semaine&apos;, ISBLANK(a_Jours_de_semaine__c)))</errorConditionFormula>
    <errorDisplayField>a_Jours_de_semaine__c</errorDisplayField>
    <errorMessage>Pour le Type de récurrence Jours de la semaine, veuillez renseigner au moins un jour de la semaine.</errorMessage>
</ValidationRule>