unpackaged/main/default/objects/WorkOrder/validationRules/Validate_recurrence_type.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_recurrence_type</fullName>
    <active>true</active>
    <errorConditionFormula>and(TEXT(Status) = &apos;In Progress&apos;,  TEXT(a_Type_de_recurrence__c ) = &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>a_Type_de_recurrence__c</errorDisplayField>
    <errorMessage>Veuillez renseigner un Type de récurrence.</errorMessage>
</ValidationRule>