unpackaged/main/default/objects/WorkOrder/validationRules/Validate_Territory.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Territory</fullName>
    <active>true</active>
    <errorConditionFormula>and(TEXT(Status) = &apos;In Progress&apos;, ServiceTerritoryId = &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>ServiceTerritoryId</errorDisplayField>
    <errorMessage>Veuillez renseigner le territoire.</errorMessage>
</ValidationRule>