unpackaged/main/default/objects/WorkOrder/listViews/Actes.listView-meta.xml
<ListView>
    <fullName>Actes</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Subject</columns>
    <columns>Status</columns>
    <columns>Priority</columns>
    <columns>a_Prestation__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>WorkOrder.Acte</value>
    </filters>
    <label>Actes</label>
</ListView>