unpackaged/main/default/objects/WorkOrder/listViews/Catalogue_InterRAI.listView-meta.xml
<ListView>
    <fullName>Catalogue_InterRAI</fullName>
    <columns>Name</columns>
    <columns>Code_InterRAI__c</columns>
    <columns>Groupe_InterRAI__c</columns>
    <columns>Subject</columns>
    <columns>Fr_quence_InterRAI__c</columns>
    <columns>Temps_InterRAI__c</columns>
    <columns>Temps__c</columns>
    <columns>Code_LaMAL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>WorkOrder.Catalogue_des_prestations</value>
    </filters>
    <label>Catalogue InterRAI</label>
</ListView>