unpackaged/main/default/objects/WorkOrder/listViews/Toutes_prestations.listView-meta.xml
<ListView>
    <fullName>Toutes_prestations</fullName>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>Account</columns>
    <columns>Priority</columns>
    <columns>Status</columns>
    <columns>a_Derniere_fois_planifie_le__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>WorkOrder.Prestation_LAMal,WorkOrder.Prestation_privee,WorkOrder.Prestation_sociale</value>
    </filters>
    <label>Toutes prestations</label>
</ListView>